--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
+  "homepage": "https://sandhiyakumar-18.github.io/Sandhiyakumar",
   "name": "sandhiya",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
+    "dom": "^0.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^7.1.1",
+    "react-scripts": "5.0.1",
+    "reat": "^0.0.1-security",
+    "router": "^1.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
